firmware/build/log/idf_py_stderr_output_4305
CMake Deprecation Warning at /Users/sergeybarabash/robo/esp/v5.4/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp: In destructor 'virtual McpwmPulseGenerator::~McpwmPulseGenerator()':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:103:13: error: 'mcpwm_del_comparator' was not declared in this scope; did you mean 'mcpwm_del_operator'?
  103 |             mcpwm_del_comparator(cmpr_handle_);
      |             ^~~~~~~~~~~~~~~~~~~~
      |             mcpwm_del_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp: In member function 'virtual esp_err_t McpwmPulseGenerator::init()':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:190:5: error: 'mcpwm_comparator_config_t' was not declared in this scope; did you mean 'mcpwm_operator_config_t'?
  190 |     mcpwm_comparator_config_t cmpr_config = {};
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_operator_config_t
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:191:5: error: 'cmpr_config' was not declared in this scope; did you mean 'oper_config'?
  191 |     cmpr_config.flags.update_cmp_on_tez = true;  // Update on timer zero
      |     ^~~~~~~~~~~
      |     oper_config
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:193:11: error: 'mcpwm_new_comparator' was not declared in this scope; did you mean 'mcpwm_new_operator'?
  193 |     ret = mcpwm_new_comparator(oper_handle_, &cmpr_config, &cmpr_handle_);
      |           ^~~~~~~~~~~~~~~~~~~~
      |           mcpwm_new_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:206:5: error: 'mcpwm_comparator_set_compare_value' was not declared in this scope
  206 |     mcpwm_comparator_set_compare_value(cmpr_handle_, compare_value);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:218:9: error: 'mcpwm_del_comparator' was not declared in this scope; did you mean 'mcpwm_del_operator'?
  218 |         mcpwm_del_comparator(cmpr_handle_);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         mcpwm_del_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:252:9: error: 'mcpwm_del_comparator' was not declared in this scope; did you mean 'mcpwm_del_operator'?
  252 |         mcpwm_del_comparator(cmpr_handle_);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         mcpwm_del_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:275:9: error: 'mcpwm_del_comparator' was not declared in this scope; did you mean 'mcpwm_del_operator'?
  275 |         mcpwm_del_comparator(cmpr_handle_);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         mcpwm_del_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:323:9: error: 'mcpwm_del_comparator' was not declared in this scope; did you mean 'mcpwm_del_operator'?
  323 |         mcpwm_del_comparator(cmpr_handle_);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         mcpwm_del_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:355:9: error: 'mcpwm_del_comparator' was not declared in this scope; did you mean 'mcpwm_del_operator'?
  355 |         mcpwm_del_comparator(cmpr_handle_);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         mcpwm_del_operator
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp: In member function 'esp_err_t McpwmPulseGenerator::setFrequency(float)':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:809:12: error: 'mcpwm_comparator_set_compare_value' was not declared in this scope
  809 |     return mcpwm_comparator_set_compare_value(cmpr_handle_, compare_value);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/mcpwm_pulse_gen.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/all] Error 2
make: *** [all] Error 2
